--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   "devDependencies": {
     "jest": "^29.3.1",
     "webpack": "^5.58.2",
-    "webpack-cli": "^4.9.0"
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.4.0",
+    "path": "^0.12.7"
   }
 }
